# groth16-sp1-verifier

./: Cargo.toml  README.md
data/: verification_key.json
elf/: riscv32im-succinct-zkvm-elf
lib/: Cargo.toml
lib/data/: proof.json  public_inputs.json
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
src/: inputs.rs  lib.rs  main.rs  proof.rs  utils.rs  vk.rs
