[package]
name = "groth16_verifier"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
# Arkworks algebra and cryptography libraries
ark-bn254 = { version = "=0.4.0" }
ark-ff = { version = "=0.4.1", default-features = false, features = ["parallel", "asm"] }
ark-ec = { version = "=0.4.1", default-features = false, features = ["parallel"] }
ark-groth16 = { version = "=0.4.0", default-features = false, features = ["parallel"] }

# Big integer support
num-bigint = { version = "=0.4.3", default-features = false, features = ["rand"] }

# JSON parsing with Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"