[package]
version = "0.1.0"
name = "groth16-verifier-script"
edition = "2021"
default-run = "groth16-verifier"

[[bin]]
name = "groth16-verifier"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
sp1-sdk = "2.0.0"
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }

[build-dependencies]
sp1-helper = "2.0.0"
